--- a/resources/sass/pages/_messenger.scss
+++ b/resources/sass/pages/_messenger.scss
@@ -214,6 +214,7 @@
       transition: all .3s ease-in-out;
       border: $border-thickness solid $border-color;
       border-radius: $border-r;
+      box-shadow: 3px 12px 56px -15px rgba(0,0,0,0.8);
 
       &.min {
         height: 40px;
